# TestTask_ThreadPool_SumCalculator

./: .gitignore  CMakeLists.txt  calculator.cpp  calculator.h  calculator_base.h  calculator_pair.cpp  calculator_pair.h  calculator_range.cpp  calculator_range.h  conc_queue.h  conc_queue.inl  func_wrapper.h  main.cpp  task_wrapper.h  tests.cpp  tests.h  thread_pool.cpp  thread_pool.h  thread_pool.inl  utils.h
